# actixweb-askama-seaorm

./: Cargo.toml  README.md  docker-compose.yaml
migration/src/: lib.rs  m20231008_114309_create_users_table.rs
src/: app_data.rs  config.rs  handlers.rs  main.rs  templates.rs
src/models/: prelude.rs  user.rs
templates/: index.html
templates/base/: base.html
